--- a/globals.css
+++ b/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  background-color: #000;
+  color: #fff;
+}
+
 /* Custom scrollbar for Webkit */
 ::-webkit-scrollbar {
   width: 0px;
